--- a/powerapps-docs/maker/TOC.yml
+++ b/powerapps-docs/maker/TOC.yml
@@ -1069,6 +1069,8 @@ items:
       href: ./common-data-service/navigate-specific-solution.md
     - name: ソリューションを作成する
       href: ./common-data-service/create-solution.md
+    - name: ソリューションのレイヤー
+      href: ./common-data-service/solution-layers.md
     - name: ソリューションのチェックを使う
       href: ./common-data-service/use-powerapps-checker.md
     - name: セグメント化されたソリューションを使用する
@@ -1114,9 +1116,9 @@ items:
     href: ./common-data-service/data-platform-cds-newentity-troubleshooting-mashup.md
   - name: サポート
     href: https://powerapps.microsoft.com/support/
-ms.openlocfilehash: 7ba1f96d9fb2d0a3fdfc05721e8685630898028e
-ms.sourcegitcommit: 57185a7d2af0dd1d67d7204754d8457f886c8704
+ms.openlocfilehash: 0c700bfab0a1b8858a78a094af26af9d9b58a9b9
+ms.sourcegitcommit: b316e0eee9946ef09e0512577ce2d11cd27aa864
 ms.translationtype: HT
 ms.contentlocale: ja-JP
-ms.lasthandoff: 04/08/2019
-ms.locfileid: "59246044"
+ms.lasthandoff: 04/11/2019
+ms.locfileid: "59508334"
